added loging option

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="chat-container">
+    <div id="auth">
+        <h2>Login</h2>
+        <input type="text" id="login-username" placeholder="Username">
+        <input type="password" id="login-password" placeholder="Password">
+        <button onclick="login()">Login</button>
+        
+        <h2>Register</h2>
+        <input type="text" id="register-username" placeholder="Username">
+        <input type="password" id="register-password" placeholder="Password">
+        <button onclick="register()">Register</button>
+    </div>
+
+    <div id="chat-container" style="display:none;">
         <div id="chat-messages"></div>
         <div class="input-area">
             <input type="text" id="user-input" placeholder="Type your message...">
